@@ -619,6 +619,8 @@ public:
         /* [retval][out] */ IWebInspector**);
 
     virtual HRESULT STDMETHODCALLTYPE clearUndoRedoOperations( void);
+    virtual HRESULT STDMETHODCALLTYPE shouldClose( 
+        /* [retval][out] */ BOOL* result);
 
     virtual HRESULT STDMETHODCALLTYPE setProhibitsMainFrameScrolling(BOOL);
     virtual HRESULT STDMETHODCALLTYPE setShouldApplyMacFontAscentHack(BOOL);
